Set line-height = 0 to prevent misalignment

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -12,6 +12,7 @@ a {
   overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
   font-size: 0;
+  line-height: 0;
   white-space: nowrap;
 }
 
